After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 670557 - gvaluetransform: Fix an infinite loop with GFlagsValue sets with the 0 value
gvaluetransform: Fix an infinite loop with GFlagsValue sets with the 0 value
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gobject
unspecified
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
: 670552 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2012-02-21 16:18 UTC by Rui Matos
Modified: 2012-02-22 13:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gvaluetransform: Fix an infinite loop with GFlagsValue sets with the 0 value (2.42 KB, patch)
2012-02-21 16:20 UTC, Rui Matos
committed Details | Review

Description Rui Matos 2012-02-21 16:18:57 UTC
Transforming a GValue holding flags from a GFlagsValue set that includes the 0
value (no flag bits set) into a string would loop until exhausting all the
available memory.
Comment 1 Rui Matos 2012-02-21 16:20:52 UTC
Created attachment 208148 [details] [review]
gvaluetransform: Fix an infinite loop with GFlagsValue sets with the 0 value
Comment 2 Akhil Laddha 2012-02-22 04:26:53 UTC
*** Bug 670552 has been marked as a duplicate of this bug. ***
Comment 3 Matthias Clasen 2012-02-22 08:51:59 UTC
Review of attachment 208148 [details] [review]:

Nice catch
Comment 4 Rui Matos 2012-02-22 13:06:28 UTC
(In reply to comment #2)
> *** Bug 670552 has been marked as a duplicate of this bug. ***

Thanks for cleaning my git-bz misuse Akhil.

Attachment 208148 [details] pushed as 9ff09f3 - gvaluetransform: Fix an infinite loop with GFlagsValue sets with the 0 value